[project]
name = "py-teststand"
version = "0.1.0"
description = "Community object-oriented Python 3 bindings for the National Instruments TestStand™ COM API"
readme = "README.md"
requires-python = ">=3.8.20"

keywords = [
    "teststand",
    "national-instruments",
    "ni",
    "com",
    "automation",
    "test-automation",
    "manufacturing",
    "station-provisioning",
    "pywin32",
    "windows",
    "python"
]
authors = [{ name = "Dominik Rajchel" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "pywin32>=305; sys_platform == 'win32'",
    "typing-extensions>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/TheDomcio/py-teststand"
Repository = "https://github.com/TheDomcio/py-teststand"
Issues = "https://github.com/TheDomcio/py-teststand/issues"
"Bug Reports" = "https://github.com/TheDomcio/py-teststand/issues"
"Source Code" = "https://github.com/TheDomcio/py-teststand"
"TestStand API Reference" = "https://www.ni.com/docs/en-US/bundle/teststand-api-reference/page/tshelp/teststand-api-reference.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_teststand"]

[tool.ruff]
line-length = 100
target-version = "py38"
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "ARG", "PTH", "RUF"]
ignore = []
per-file-ignores = { "src/**" = ["N801"], "tests/**" = ["N801"]  }
unfixable = []
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["py_teststand"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests (slow, requires TestStand™ installation)",
    "unit: marks tests as unit tests (fast, no TestStand™ required)",
    "live_com: marks tests as requiring live TestStand™ COM registration",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.34",
    "types-pywin32",
]

[tool.ty]
rules = { "possibly-missing-attribute" = "ignore" }

[tool.ty.terminal]
error-on-warning = false

[tool.coverage.run]
branch = true
source = ["src/py_teststand"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true